--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ authors = ["Dorian Jaminais-Grellier <dorian@jaminais.fr>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-requests = "^2.27.1"
+requests = "^2.31.0"
 argparse-logging = "^2020.11.26"
 urllib-ext = "^2021.10.26"
 
-[tool.poetry.dev-dependencies]
-black = "^22.3.0"
-isort = "^5.10.1"
-mypy = "^0.950"
+[tool.poetry.group.dev.dependencies]
+black = "^23.7.0"
+isort = "^5.12.0"
+mypy = "^1.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
